# PalRUP-Check

./: .gitignore  CMakeLists.txt  LICENSE  README.md
proofs/r3unsat_200/0/0/: out.palrup
proofs/r3unsat_200/0/3/: out.palrup
proofs/r3unsat_200/1/6/: out.palrup
proofs/r3unsat_200/2/9/: out.palrup
scripts/pal/: out.palrup_import.dummy  pal.sh  pal_launcher.sh
scripts/parse/: parse.sh  parse_lib.py  parse_logs.py
scripts/plot/: plot_lib.py  sat26.py
scripts/setup/: build.sh  compile.sh
src/: backward_file_reader.c  backward_file_reader.h  clause_finder.c  clause_finder.h  clause_flat.c  clause_flat.h  comm_sig.c  comm_sig.h  confirm.c  confirm.h  file_reader.c  file_reader.h  hash.c  hash.h  heap.c  heap.h  import_extractor.c  import_extractor.h  import_handler.c  import_handler.h  import_merger.c  import_merger.h  local_checker.c  local_checker.h  local_trim.c  local_trim.h  lrat_check.c  lrat_check.h  main_confirm.c  main_extract_imports.c  main_local_check.c  main_local_trim.c  main_redistribute.c  main_redistribute_trim.c  merge_buffer.c  merge_buffer.h  options.c  options.h  palrup_tracer.c  palrup_tracer.h  (+18 more)
src/utils/: checker_utils.c  checker_utils.h  define.h  option_utils.c  option_utils.h  palrup_utils.c  palrup_utils.h
test/: test_backward_file_reader.c  test_checker_utils.c  test_clause_flat.c  test_file_reader.c  test_full_run.c  test_hash.c  test_heap.c  test_import_handler.c  test_merge_buffer.c  test_palrup_tracer.c  test_utils.c  test_utils.h  vbl_fragment
tools/: check_comm_file.c  comm_file_to_txt.c  comm_file_trim_to_txt.c  proof_fragment_to_txt.c
tracer/: TRACER.md  palrup_tracer.c  palrup_tracer.h  palrup_tracer.hpp
